--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -8,6 +8,106 @@
     <link rel="stylesheet" href="css/admin_dashboard.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
+    <style>
+        .modal-dialog {
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            z-index: 1001;
+            width: 800px;
+            max-width: 90%;
+        }
+
+        .modal-dialog.show {
+            display: block;
+        }
+
+        .confirmation-dialog {
+            z-index: 1001;
+        }
+
+        .modal-dialog {
+            z-index: 1002;
+            /* Higher than confirmation dialog */
+        }
+
+        .overlay {
+            z-index: 1000;
+        }
+        .modal {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.7);
+            z-index: 1000;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .modal-content {
+            background-color: white;
+            border-radius: 8px;
+            width: 100%;
+            max-width: 800px;
+            max-height: 90vh;
+            overflow-y: auto;
+            padding: 20px;
+            position: relative;
+        }
+
+        .modal-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 20px;
+            padding-bottom: 10px;
+            border-bottom: 1px solid #ddd;
+        }
+
+        .modal-header h2 {
+            color: var(--secondary-color);
+        }
+
+        .close-modal {
+            background: none;
+            border: none;
+            font-size: 24px;
+            cursor: pointer;
+            color: var(--dark-gray);
+        }
+
+        .modal-body {
+            margin-bottom: 20px;
+        }
+
+        .modal-footer {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .document-viewer {
+            margin-top: 20px;
+            text-align: center;
+        }
+
+        .document-viewer img, .document-viewer iframe {
+            max-width: 100%;
+            max-height: 60vh;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+        }
+    </style>
 </head>
 
 <body>
@@ -15,6 +115,21 @@
 
     <!-- Notification element -->
     <div id="notification" class="notification"></div>
+
+    <!-- Modal Dialog -->
+    <!-- Gawa ko -->
+    <!-- Modal Dialog -->
+<div id="ModalDialog" class="modal-dialog">
+    <div class="modal-content">
+        <div class="modal-header">
+            <h2 id="modalName">Registration Details</h2>
+            <button id="closeModal" class="close-modal">&times;</button>
+        </div>
+        <div id="modalContent" class="modal-body">
+            <!-- Dynamic content will go here -->
+        </div>
+    </div>
+</div>
 
     <!-- Confirmation Dialog -->
     <div id="confirmationDialog" class="confirmation-dialog">
